# ImarisParser

./: .gitignore  README.md  pyproject.toml
example/: sample_output.csv
parser/: filament_parser.ipynb  spot_parser.ipynb  surface_parser.ipynb
parser/config/: config_filaments.yaml  config_spots.yaml  config_surface.yaml
parser/dev_notebooks/: dev_surface_parser.ipynb  dev_test_spot_track.ipynb  dev_test_spot_track_object.ipynb  diff_objects_vs_track_objects copy.ipynb  diff_objects_vs_track_objects.ipynb
parser/imaris/: exceptions.py  imaris.py
parser/parsers/: filament_parser.py  parser_base.py  spot_track_object_parser.py  spot_track_parser.py  surface_parser.py  surface_time_step_parser.py  surface_track_object_parser.py  surface_track_parser.py
parser/parsers_v2/: filament_parser.py  spot_track_object_parser.py  surface_time_step_parser.py  surface_track_parser.py
parser/scripts/: process_class.py  process_filaments.py  process_spots.py  process_surface.py  processor.py
parser/scripts_v2/: process_filaments.py  process_filaments_v2.py  process_spots.py  process_spots_v2.py  process_surface.py  process_surface_v2.py
parser/utils/: data.py  logger.py  utils.py
test/: test_spot_track_object_parser.py  test_spot_track_parser.py  test_surface_track_parser.py
